UI: Flipping a Sidebar with more tabs isn't aligned correct #71810

Closed
opened 2019-11-23 11:09:37 +01:00 by tintwotin · 9 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: Intel(R) UHD Graphics 600 Intel 4.5.0 - Build 26.20.100.7158

Blender Version
Broken: version: 2.82 (sub 1), branch: master (modified), commit date: 2019-11-22 06:23, hash: 3d015c71cc
Worked: (optional)

Short description of error
UI: Flipping a Sidebar with more tabs isn't aligned correct after a flip(gif): Flip_sidebar.gif

Exact steps for others to reproduce the error
Install a Text Editor add-on which is placed in a new tab and run this scrip:

import bpy
# flip text editor sidebar
context = bpy.context
c = {}  # override dictionary
window = context.window
c["window"] = window
for screen in bpy.data.screens:
    #print (str(screen))
    c["screen"] = screen
    for area in screen.areas:
        c["area"] = area
        #print (str(area.type))
        if area.type == "TEXT_EDITOR":
            for region in area.regions:
                print (str(region.type))
                if region.type == 'UI':# and not (region.x - area.x):
                    c["region"] = region
                    bpy.ops.screen.region_flip(c)
**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: Intel(R) UHD Graphics 600 Intel 4.5.0 - Build 26.20.100.7158 **Blender Version** Broken: version: 2.82 (sub 1), branch: master (modified), commit date: 2019-11-22 06:23, hash: `3d015c71cc` Worked: (optional) **Short description of error** UI: Flipping a Sidebar with more tabs isn't aligned correct after a flip(gif): ![Flip_sidebar.gif](https://archive.blender.org/developer/F8158192/Flip_sidebar.gif) **Exact steps for others to reproduce the error** Install a Text Editor add-on which is placed in a new tab and run this scrip: ``` import bpy # flip text editor sidebar context = bpy.context c = {} # override dictionary window = context.window c["window"] = window for screen in bpy.data.screens: #print (str(screen)) c["screen"] = screen for area in screen.areas: c["area"] = area #print (str(area.type)) if area.type == "TEXT_EDITOR": for region in area.regions: print (str(region.type)) if region.type == 'UI':# and not (region.x - area.x): c["region"] = region bpy.ops.screen.region_flip(c) ```
Author

Added subscriber: @tintwotin

Added subscriber: @tintwotin
Member

Added subscribers: @WilliamReynish, @JacquesLucke

Added subscribers: @WilliamReynish, @JacquesLucke
Member

I can reproduce this alignment issue. I did not even know this is supposed to work for this region. @WilliamReynish, should this work? How do I do the same from the UI?

I can reproduce this alignment issue. I did not even know this is supposed to work for this region. @WilliamReynish, should this work? How do I do the same from the UI?

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

@JacquesLucke You can run the Flip Region operator with the cursor over the sidebar and get the same issue. This operator is quite hidden, so almost no users would ever run into this in practice, and of course it fixes itself when you resize the view. But I guess it is a bug, just a very low priority one.

@JacquesLucke You can run the Flip Region operator with the cursor over the sidebar and get the same issue. This operator is quite hidden, so almost no users would ever run into this in practice, and of course it fixes itself when you resize the view. But I guess it *is* a bug, just a very low priority one.
Author

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Author

I wrote about the misalignment in the UI chat, and @JulianEisel told me to report it here.

The misalignment is quite visible and annoying when ex. using the screenwriter add-on(gif):
BSW.gif

I wrote about the misalignment in the UI chat, and @JulianEisel told me to report it here. The misalignment is quite visible and annoying when ex. using the screenwriter add-on(gif): ![BSW.gif](https://archive.blender.org/developer/F8265982/BSW.gif)

This issue was referenced by 5d69d2a863

This issue was referenced by 5d69d2a86358c7c2e506edeafab15597aab66890
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2020-01-21 16:39:34 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71810
No description provided.