Fix T71810: Flipping Sidebar with tabs breaks alignment

Panel alignment was only updated when panel size changed. Now we can
also recognize changes in the category tabs offset and tag panels
for alignment updates.