source/blender/editors/screen/area.c
@@ -2344,7 +2344,7 @@ static void ed_panel_draw(const bContext *C,
     }
   }
 
-  UI_panel_end(block, w, h, open);
+  UI_panel_end(sa, ar, block, w, h, open);
 }
 
 /**
